<resources>
    <string name="app_name">Bergerak1</string>
    <string name="add">Add</string>
    <string name="create_task">Create a new Task</string>
    <string name="task_list">My Task List</string>
    <string name="my_task">My Task</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_task">Edit My Task</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>